# elta-panorama-categorization-api

./: .gitignore  README.md  app.py  pyproject.toml
img_classification/: image.py  panoramas.json  pyproject.toml  read_image.py
img_classification/img_classification/: image.py  split.py
saved_model/: keras_metadata.pb  saved_model.pb
saved_model/variables/: variables.index
